# elink

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: Elink.pc.in  ElinkConfig.cmake.in  ElinkConfigVersion.cmake.in
include/elink/: Common.hpp  config.h  elink.h
include/elink/common/: Error.hpp  ErrorCode.hpp  FiniteStateMachine.hpp  IStreamCommon.hpp  LogRedirect.hpp  NativeHandle.hpp  OStreamCommon.hpp  Platform.h  Poll.hpp  Result.hpp  RingBuffer.hpp  Thread.hpp  Type.hpp
include/elink/common/codec/: IStreamCommon.hpp  OStreamCommon.hpp
include/elink/common/communication/: Component.hpp  Serial.hpp  Type.hpp
include/elink/common/details/: Platform.hpp
include/elink/common/details/codec/: IStream.hpp  OStream.hpp
include/elink/common/details/handle/: NativeHandlePosix.hpp  NativeHandleWindows.hpp
include/elink/common/details/poll/: PlatformPollConcept.hpp  PlatformPollPosixImp.hpp  PlatformPollWindowsImp.hpp  PlatformPoller.hpp  PlatformPollerImpPosix.hpp  PlatformPollerImpWindows.hpp  PollEntry.hpp
include/elink/common/details/thread/: ThreadConcept.hpp  ThreadName.hpp  ThreadNameImpMacOS.hpp  ThreadNameImpPosix.hpp  ThreadNameImpWindows.hpp
include/elink/common/logging/: logger.hpp
include/elink/common/thread/: Thread.hpp
include/elink/iec60870/: AppLayerParameters.hpp  ApplicationServiceDataUnit.hpp  BinaryCounterReading.hpp  CPxxTime2a.hpp  CauseOfTransmission.hpp  IEC60870.hpp  SingleEvent.hpp  StatusAndStatusChangeDetection.hpp
include/elink/iec60870/codec/: IOStream.h  IStream.hpp  OStream.hpp
include/elink/iec60870/communication/link_layer/: FT12Message.hpp  FT12MessageTransceiver.hpp  SerialFT12MessageTransceiver.hpp
include/elink/iec60870/cpxxtime2a/: CPxxTime2a.hpp
include/elink/iec60870/details/: ApplicationServiceDataUnitImp.hpp  CPxxTime2aImp.hpp  CPxxTime2aUtil.hpp  InformationObjectSerializable.hpp
include/elink/iec60870/details/codec/: IOStream.h  IStream.hpp  OStream.hpp
include/elink/iec60870/details/cpxxtime2a/: CPxxTime2aImp.hpp  CPxxTime2aUtil.hpp
include/elink/iec60870/details/io/: BitString32Imp.hpp  BitString32WithoutQualityImp.hpp  ClockSynchronizationCommandImp.hpp  CommandImp.hpp  CommandWithQOSImp.hpp  CounterInterrogationCommandImp.hpp  DelayAcquisitionCommandImp.hpp  DoubleCommandImp.hpp  DoublePointInformationImp.hpp  EndOfInitializationImp.hpp  EventOfProtectionEquipmentImp.hpp  FileACKImp.hpp  FileCallOrSelectImp.hpp  FileDirectoryImp.hpp  FileImp.hpp  FileLastSegmentOrSectionImp.hpp  FileReadyImp.hpp  FileSectionImp.hpp  FileSegmentImp.hpp  InformationObjectSerializable.hpp  QueryLogImp.hpp  (+28 more)
include/elink/iec60870/formatter/: CauseOfTransmissionFormatter.hpp  Formatter.h  IOList.hpp  InformationObjectAddressFormatter.hpp  InformationObjectFormatter.hpp  InformationObjectTypeIDFormatter.hpp
include/elink/iec60870/io/: BitString32.hpp  BitString32Command.hpp  BitString32CommandWithCP56Time2a.hpp  BitString32WithCP24Time2a.hpp  BitString32WithCP56Time2a.hpp  ClockSynchronizationCommand.hpp  CounterInterrogationCommand.hpp  DelayAcquisitionCommand.hpp  DoubleCommand.hpp  DoubleCommandWithCP56Time2a.hpp  DoublePointInformation.hpp  DoublePointWithCP24Time2a.hpp  DoublePointWithCP56Time2a.hpp  EndOfInitialization.hpp  EventOfProtectionEquipment.hpp  EventOfProtectionEquipmentWithCP56Time2a.hpp  FileACK.hpp  FileCallOrSelect.hpp  FileDirectory.hpp  FileLastSegmentOrSection.hpp  FileReady.hpp  FileSegment.hpp  IO.h  InformationObject.hpp  InformationObjectAddress.hpp  InformationObjectTypeID.h  InformationObjectUtil.hpp  IntegratedTotals.hpp  IntegratedTotalsWithCP24Time2a.hpp  IntegratedTotalsWithCP56Time2a.hpp  InterrogationCommand.hpp  MeasuredValueNormalized.hpp  MeasuredValueNormalizedWithCP24Time2a.hpp  MeasuredValueNormalizedWithCP56Time2a.hpp  MeasuredValueNormalizedWithoutQuality.hpp  MeasuredValueScaled.hpp  MeasuredValueScaledWithCP24Time2a.hpp  MeasuredValueScaledWithCP56Time2a.hpp  MeasuredValueShort.hpp  MeasuredValueShortWithCP24Time2a.hpp  (+35 more)
include/elink/util/: TypeName.hpp  Utils.hpp
script/: update-copyright-year.py
test/: CMakeLists.txt
test/common/: Test_FiniteStateMachine.cpp  Test_IStreamCommon.cpp  Test_OStreamCommon.cpp  Test_RelocatedLog.cpp  Test_RingBuffer.cpp
test/common/mock/: MockIStream.hpp  MockOStream.hpp
test/iec60870/: Test_ApplicationServiceDataUnit.cpp  Test_BinaryCounterReading.cpp  Test_CPxxTime2a.cpp  Test_SingleEvent.cpp  Test_StatusAndStatusChangeDetection.cpp
test/iec60870/asdu/: Test_ApplicationServiceDataUnit.cpp
test/iec60870/codec/: Test_IStream.cpp  Test_OStream.cpp
test/iec60870/communication/: Test_FT12MessageTransceiver.cpp
test/iec60870/communication/mock/: MockSerial.hpp
test/iec60870/cpxxtime2a/: Test_CPxxTime2a.cpp
test/iec60870/formatter/: Test_Formatter.cpp
test/iec60870/io/: Test_BitString32Set.cpp  Test_ClockSynchronizationCommand.cpp  Test_CommandSet.cpp  Test_CounterInterrogationCommand.cpp  Test_DelayAcquisitionCommand.cpp  Test_DoublePointInformation.cpp  Test_DoublePointInformationSet.cpp  Test_DoublePointWithCP24Time2a.cpp  Test_EndOfInitialization.cpp  Test_EventOfProtectionEquipmentSet.cpp  Test_FileSet.cpp  Test_InformationObjectAddress.cpp  Test_InformationObjectSerializable.cpp  Test_InformationObjectTypeID.cpp  Test_InformationObjectWithCPxxTime2a.cpp  Test_IntegratedTotalsSet.cpp  Test_InterrogationCommand.cpp  Test_MeasuredValueNormalizedSet.cpp  Test_MeasuredValueScaledSet.cpp  Test_MeasuredValueShortSet.cpp  Test_PackedOutputCircuitInfoSet.cpp  Test_PackedSinglePointWithSCD.cpp  Test_PackedStartEventsOfProtectionEquipmentSet.cpp  Test_ParameterActivation.cpp  Test_ReadCommand.cpp  Test_ResetProcessCommand.cpp  Test_SinglePointInformation.cpp  Test_SinglePointInformationSet.cpp  Test_SinglePointWithCP24Time2a.cpp  Test_StepPositionInformation.cpp  Test_StepPositionInformationSet.cpp  Test_StepPositionWithCP24Time2a.cpp  Test_TestCommand.cpp
test/iec60870/io/Mock/: MockInformationObjectSerializable.hpp  MockInformationObjectWithCPxxTime2a.hpp
(+6 files in other folders)
